# dolibarr-lib-rs

./: .typos.toml  Cargo.toml  README.md
src/: condition.rs  customer.rs  deserializer.rs  document.rs  lib.rs  product.rs
