[package]
name = "dolibarr-lib-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_with = "3.9"
serde_json = "1.0"
derivative = "2.2"
chrono = {version="0.4", default-features = false, features = ["serde", "clock"]}
bincode = {version="2.0.0-rc.3", features=["serde"], optional=true}
merge = { features = ["derive"], version = "0.1", optional = true }
strum = {version="0.26", features=["derive"], optional=true}
cfg-if = "1.0"
[features]
default=["merge"]
bincode=["dep:bincode"]
merge=["dep:merge"]
lang-fr=[]
## ExtraFields
bnf=[]
condition=["dep:strum"]
ef_libelle=[]
ef_auteur=[]
ef_collection=[]
ef_isbnediteur=[]
ef_theme=[]
ef_last-modif=["des_opt_timestamp"]
ef_datedeparution=["des_opt_timestamp"]
ef_fincommerce=["des_opt_timestamp"]
ef_title=[]
ef_stock_origin=[]
ef_ecommerce=[]
ef_advised_price=[]
ef_theme_code=[]
ef_presentation_editeur=[]
ef_public_cible=[]
## serializer/deserializer
des_opt_timestamp=[]
des_opt_bool=[]
ser_opt_bool_to_int=[]
## different use of dolibarr
bookstore=["condition"]
## sync with rakuten
rakuten=[]
## sync with dilicom
dilicom=["ef_libelle", "ef_auteur", "ef_collection", "ef_isbnediteur", "ef_theme", "ef_last-modif", "ef_datedeparution", "ef_fincommerce", "ef_title", "ef_stock_origin", "ef_advised_price", "bnf", "ef_theme_code", "ef_presentation_editeur", "des_opt_bool"]
## Gestion Stock per Emplacement
## Allows more fine tuned stock location management.
gse=["ser_opt_bool_to_int"]
